@@ -2386,6 +2386,10 @@ Fri, 10 Oct 2008 14:03:05 +0200
 Tue, 14 Oct 2008 11:25:51 +0200
 
 	- Fixed parameter parsing.
+
+Sat, 25 Oct 2008 16:34:28 +0200
+
+	- Free allocated memory even if the next alloc failed with ENOMEM.
 	- Set pgtypes library version to 3.1.
 	- Set compat library version to 3.1.
 	- Set ecpg library version to 6.2.
